--- a/angular/crud-operations/src/app/post/index/index.component.html
+++ b/angular/crud-operations/src/app/post/index/index.component.html
@@ -1,1 +1,28 @@
-<p>index works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h1>Crud Operations</h1>
+            <a href="#" routerLink="/post/create/">Create New Post</a>
+            <br />
+        
+            <table class="table table-bordered">
+                <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Body</th>
+                    <th width="220px">Action</th>
+                </tr>
+                <tr *ngFor="let post of posts">
+                    <td>{{post.id}}</td>
+                    <td>{{post.title}}</td>
+                    <td>{{post.body}}</td>
+                    <td>
+                        <a href="#" [routerLink]="['/post/', post.id, 'view']" class="btn btn-primary">View</a>
+                        <a href="#" [routerLink]="['/post/', post.id, 'edit']" class="btn btn-info">Edit</a>
+                        <button type="button" (click)="deletePost(post.id)" class="btn btn-danger">Delete</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
